adding support for new 'watch' command which auto-regenerates the template when files change